# mongorepo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  conf.py  docker-compose.yaml  factory.py  index.html  mkdocs.yml  mypy.ini  pyproject.toml  repo.py  showcase.py  test.py
.devcontainer/: Dockerfile  compose.yaml
.github/workflows/: dc-tests.yml  pypi_publish.yml  python-package.yml
async_support/: index.html
decorators/: index.html
docs/: decorators.md  index.md  meta_class.md  quick_start.md
docs/code/: decorators.py  meta_class.py
meta_class/: index.html
mongorepo/: __init__.py  _base.py  _collections.py  _common.py  _field.py  _handlers.py  _methods.py  _mongorepo_dict.py  _setters.py  _substitute.py  base.py  classes.py  collection_provider.py  decorators.py  docs.py  exceptions.py  handlers.py  queries.py  setters.py  subst.py  types.py  utils.py
mongorepo/_implements/: decorators.py  handlers.py  methods.py  substitute.py
mongorepo/_implements_deco/: _methods.py  handler.py
mongorepo/_methods/: __init__.py  arrays.py  crud.py  impl.py  impl_async.py  integer.py  interfaces.py
mongorepo/_modifiers/: base.py
mongorepo/asyncio/: _methods.py  classes.py  decorators.py  utils.py
mongorepo/implement/: __init__.py  _handlers.py  _substitute.py  _types.py  _utils.py  decorator.py  enums.py  exceptions.py  method_mapper_utils.py  methods.py  validations.py
mongorepo/implements/: __init__.py  _handlers.py  _substitute.py  _utils.py  decorator.py  mapper.py  methods.py
mongorepo/modifiers/: __init__.py  base.py
mongorepo/types/: __init__.py  base.py  collection_provider.py  field.py  field_alias.py  method_access.py  mongorepo_dict.py  repository_config.py
mongorepo/utils/: dataclass_converters.py  entity_converters.py  field_factory.py  mongo_collection.py  (+4 more)
site/: 404.html
tests/: common.py
(+95 files in other folders)
