[tool.poetry]
name = "mongorepo"
version = "0.1.0"
description = "Simple lib that dynamically creates repositories for MongoDB"
authors = ["artorias <kerelkobarabash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
motor = "^3.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
