[tool.poetry]
name = "mongorepo"
version = "1.1.0"
description = "Simple lib that dynamically creates repositories for MongoDB"
authors = ["artorias <kerelkobarabash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
motor = "^3.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.26"
pygments = "^2.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
