[tool.poetry]
name = "mongorepo"
version = "3.1.1"
description = "Simple lib that dynamically creates repositories for MongoDB"
authors = ["artorias <kyrylbarabash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
motor = "^3.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
pre-commit = "^3.8.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.26"
pygments = "^2.18.0"

[tool.mypy]
exclude = ["data/", "tests/", "raw_tests.py"]
check_untyped_defs = false
disallow_untyped_calls = false

# For "Cannot call function of unknown type"
disable_error_code = ["operator"]

[tool.pytest]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 1
